# fmt2

./: Cargo.toml  README.md
fmt2/: Cargo.toml
fmt2/src/: ansi.rs  macros.rs  write.rs  write_to.rs
fmt2/src/terminal/: event.rs  mod.rs
fmt2/src/terminal/prompt/: consts.rs  info.rs  select.rs  unsigned_int.rs  utils.rs
fmt2_macros/: Cargo.toml
fmt2_macros/src/: lib.rs  utils.rs
fmt2_macros/src/fmt/: stage1.rs  stage2.rs
src/: lib.rs  macros.rs  screen_area.rs  str.rs  style.rs  utils.rs  writable.rs  write.rs  write_to.rs
src/terminal/prompt/: mod.rs  select.rs  utils.rs
