[package]
name = "fmt2"
version = "0.3.3"
edition = "2021"
description = "traits, structs and macros for formatting"
license = "MIT"
repository = "https://github.com/coolCucumber-cat/fmt2.git"
readme = "README.md"
categories = ["command-line-interface", "no-std::no-alloc", "no-std"]
keywords = ["format", "string", "style", "color", "cli"]

[dependencies]
transmute_guard = "0.2.5"
crossterm = { version = "0.28", optional = true }

[features]
default = [
	"std",
	# comment out this line so that each feature is on its own line
	# "dev_nightly",
]
std = []

never_type = []
fmt_internals = []
ascii = ["transmute_guard/ascii"]
ascii_char_variants = []
nightly = ["transmute_guard/nightly", "never_type", "fmt_internals", "ascii"]

terminal = []
event = ["terminal", "dep:crossterm"]
screen_area = ["terminal"]
prompt = ["terminal", "std"]

info_prompt = ["prompt", "event", "screen_area"]
select_prompt = ["prompt", "event", "screen_area"]
unsigned_int_prompt = [
	"prompt",
	"event",
	"screen_area",
	"ascii",
	"ascii_char_variants",
]

dev_stable = ["info_prompt", "select_prompt"]
dev_all_prompts_nightly = ["dev_stable", "unsigned_int_prompt"]
dev_nightly = ["dev_all_prompts_nightly", "nightly"]
